fix UI in legends panel when there is an overflowing single word

--- a/client/src/style/sass/common/_right-panel.scss
+++ b/client/src/style/sass/common/_right-panel.scss
@@ -66,6 +66,7 @@
     .panel-text {
         max-width: 230px;
         max-height: 30px;
+        overflow-wrap: break-word;
     }
 
     .panel-edit-icon {
